# playlist-backend

./: Cargo.toml  fritzmigrate.sql
migrations/2021-01-21-204919_create_tables/: down.sql  up.sql
src/: api.rs  db.rs  handlers.rs  lib.rs  main.rs  models.rs  schema.rs
