[package]
name = "playlist-backend"
version = "0.1.0"
authors = ["poncho"]
edition = "2018"

[lib]
name = "playlist_backend_lib"
path = "src/lib.rs"

[dependencies]
diesel = { version = "1.4.5", features = ["mysql", "chrono"] }
r2d2 = "0.8"
r2d2-diesel = "1.0"
actix-web = "3"
actix-cors = "0.5.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
json = "0.12"
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
env_logger = "0.8.2"
